--- a/back/.env
+++ b/back/.env
@@ -1,10 +1,10 @@
 SERVER_PORT=5001
-MONGODB_URL="mongodb://localhost:27017/myDB"
+MONGODB_URL="cluster0.cnmeavp.mongodb.net"
 JWT_SECRET_KEY="ad5kafl91ak@192vk0ckv#ao!d3o1qw%ez"
 
 # 종훈님 계정
-# DB_ID = valuemore
-# DB_PASSWORD = !Sub403412
+DB_ID = valuemore
+DB_PASSWORD = !Sub403412
 
-DB_ID = test
-DB_PASSWORD = test
+# DB_ID = test
+# DB_PASSWORD = test
